[tool.poetry]
name = "uuid_generator"
version = "0.1.0"
description = "Example UUID generator to learn tkinter"
authors = ["Zarif Aziz"]

[tool.poetry.dependencies]
python = ">=3.10"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
